drm/amd/display: Add DCN35 blocks to Makefile (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13716,6 +13716,7 @@
 	patches.suse/0705-drm-amd-display-Add-DCN35-init.patch
 	patches.suse/0706-drm-amd-display-Add-DCN35-Resource.patch
 	patches.suse/0707-drm-amd-display-Add-DCN35-DML.patch
+	patches.suse/0708-drm-amd-display-Add-DCN35-blocks-to-Makefile.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
