--- a/series.conf
+++ b/series.conf
@@ -13717,6 +13717,7 @@
 	patches.suse/0706-drm-amd-display-Add-DCN35-Resource.patch
 	patches.suse/0707-drm-amd-display-Add-DCN35-DML.patch
 	patches.suse/0708-drm-amd-display-Add-DCN35-blocks-to-Makefile.patch
+	patches.suse/0709-drm-amd-display-Add-DCN35-CORE.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
