--- a/series.conf
+++ b/series.conf
@@ -13718,6 +13718,7 @@
 	patches.suse/0707-drm-amd-display-Add-DCN35-DML.patch
 	patches.suse/0708-drm-amd-display-Add-DCN35-blocks-to-Makefile.patch
 	patches.suse/0709-drm-amd-display-Add-DCN35-CORE.patch
+	patches.suse/0710-drm-amd-display-Add-DCN35-DM-Support.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
