--- a/series.conf
+++ b/series.conf
@@ -13722,6 +13722,7 @@
 	patches.suse/0711-drm-amd-amdgpu-sdma_v6_0-Demote-a-bunch-of-half-comp.patch
 	patches.suse/0712-drm-amdgpu-access-RLC_SPM_MC_CNTL-through-MMIO-in-SR.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
+	patches.suse/0714-drm-amd-Simplify-the-bo-size-check-funciton.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
