--- a/series.conf
+++ b/series.conf
@@ -13725,6 +13725,7 @@
 	patches.suse/0714-drm-amd-Simplify-the-bo-size-check-funciton.patch
 	patches.suse/0715-drm-amd-display-Adjust-kdoc-for-optc35_set_odm_combi.patch
 	patches.suse/0716-amdgpu-pm-Optimize-emit_clock_levels-for-arcturus-pa.patch
+	patches.suse/0717-amdgpu-pm-Optimize-emit_clock_levels-for-arcturus-pa.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
