drm/amdgpu: remove unused parameter in amdgpu_vmid_grab_idle (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13727,6 +13727,7 @@
 	patches.suse/0716-amdgpu-pm-Optimize-emit_clock_levels-for-arcturus-pa.patch
 	patches.suse/0717-amdgpu-pm-Optimize-emit_clock_levels-for-arcturus-pa.patch
 	patches.suse/0718-drm-amdkfd-Replace-pr_err-with-dev_err.patch
+	patches.suse/0719-drm-amdgpu-remove-unused-parameter-in-amdgpu_vmid_gr.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
