--- a/series.conf
+++ b/series.conf
@@ -13729,6 +13729,7 @@
 	patches.suse/0718-drm-amdkfd-Replace-pr_err-with-dev_err.patch
 	patches.suse/0719-drm-amdgpu-remove-unused-parameter-in-amdgpu_vmid_gr.patch
 	patches.suse/0720-drm-amdgpu-Use-READ_ONCE-when-reading-the-values-in-.patch
+	patches.suse/0721-drm-amdgpu-Fix-printk_ratelimit-with-DRM_ERROR_RATEL.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
