drm/amdgpu: add VPE 6.1.0 header files (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13730,6 +13730,7 @@
 	patches.suse/0719-drm-amdgpu-remove-unused-parameter-in-amdgpu_vmid_gr.patch
 	patches.suse/0720-drm-amdgpu-Use-READ_ONCE-when-reading-the-values-in-.patch
 	patches.suse/0721-drm-amdgpu-Fix-printk_ratelimit-with-DRM_ERROR_RATEL.patch
+	patches.suse/0722-drm-amdgpu-add-VPE-6.1.0-header-files.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
