drm/amdgpu: add VPE RING TYPE definition (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13732,6 +13732,7 @@
 	patches.suse/0721-drm-amdgpu-Fix-printk_ratelimit-with-DRM_ERROR_RATEL.patch
 	patches.suse/0722-drm-amdgpu-add-VPE-6.1.0-header-files.patch
 	patches.suse/0723-drm-amdgpu-add-VPE-HW-IP-definition.patch
+	patches.suse/0724-drm-amdgpu-add-VPE-RING-TYPE-definition.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
