drm/amdgpu: add VPE HW IP BLOCK definition (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13734,6 +13734,7 @@
 	patches.suse/0723-drm-amdgpu-add-VPE-HW-IP-definition.patch
 	patches.suse/0724-drm-amdgpu-add-VPE-RING-TYPE-definition.patch
 	patches.suse/0725-drm-amdgpu-add-VPE-IP-BLOCK-definition.patch
+	patches.suse/0726-drm-amdgpu-add-VPE-HW-IP-BLOCK-definition.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
