--- a/series.conf
+++ b/series.conf
@@ -13736,6 +13736,7 @@
 	patches.suse/0725-drm-amdgpu-add-VPE-IP-BLOCK-definition.patch
 	patches.suse/0726-drm-amdgpu-add-VPE-HW-IP-BLOCK-definition.patch
 	patches.suse/0727-drm-amdgpu-add-VPE-firmware-header-definition.patch
+	patches.suse/0728-drm-amdgpu-add-VPE-firmware-interface.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
