--- a/series.conf
+++ b/series.conf
@@ -13739,6 +13739,7 @@
 	patches.suse/0728-drm-amdgpu-add-VPE-firmware-interface.patch
 	patches.suse/0729-drm-amdgpu-add-HWID-for-VPE.patch
 	patches.suse/0730-drm-amdgpu-add-IH-CLIENT-ID-for-VPE.patch
+	patches.suse/0731-drm-amdgpu-add-irq-src-id-definitions-for-VPE.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
