drm/amdgpu: add doorbell index for VPE (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13740,6 +13740,7 @@
 	patches.suse/0729-drm-amdgpu-add-HWID-for-VPE.patch
 	patches.suse/0730-drm-amdgpu-add-IH-CLIENT-ID-for-VPE.patch
 	patches.suse/0731-drm-amdgpu-add-irq-src-id-definitions-for-VPE.patch
+	patches.suse/0732-drm-amdgpu-add-doorbell-index-for-VPE.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
