--- a/series.conf
+++ b/series.conf
@@ -13743,6 +13743,7 @@
 	patches.suse/0732-drm-amdgpu-add-doorbell-index-for-VPE.patch
 	patches.suse/0733-drm-amdgpu-add-support-for-VPE-firmware-name-decodin.patch
 	patches.suse/0734-drm-amdgpu-add-UCODE-ID-for-VPE.patch
+	patches.suse/0735-drm-amdgpu-add-PSP-FW-TYPE-for-VPE.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
