drm/amdgpu: add nbio callback for VPE (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13744,6 +13744,7 @@
 	patches.suse/0733-drm-amdgpu-add-support-for-VPE-firmware-name-decodin.patch
 	patches.suse/0734-drm-amdgpu-add-UCODE-ID-for-VPE.patch
 	patches.suse/0735-drm-amdgpu-add-PSP-FW-TYPE-for-VPE.patch
+	patches.suse/0736-drm-amdgpu-add-nbio-callback-for-VPE.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
