--- a/series.conf
+++ b/series.conf
@@ -13747,6 +13747,7 @@
 	patches.suse/0736-drm-amdgpu-add-nbio-callback-for-VPE.patch
 	patches.suse/0737-drm-amdgpu-add-nbio-7.11-callback-for-VPE.patch
 	patches.suse/0738-drm-amdgpu-add-VPE-6.1.0-support.patch
+	patches.suse/0739-drm-amdgpu-add-PSP-loading-support-for-VPE.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
