drm/amdgpu: add user space CS support for VPE (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13748,6 +13748,7 @@
 	patches.suse/0737-drm-amdgpu-add-nbio-7.11-callback-for-VPE.patch
 	patches.suse/0738-drm-amdgpu-add-VPE-6.1.0-support.patch
 	patches.suse/0739-drm-amdgpu-add-PSP-loading-support-for-VPE.patch
+	patches.suse/0740-drm-amdgpu-add-user-space-CS-support-for-VPE.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
