--- a/series.conf
+++ b/series.conf
@@ -13750,6 +13750,7 @@
 	patches.suse/0739-drm-amdgpu-add-PSP-loading-support-for-VPE.patch
 	patches.suse/0740-drm-amdgpu-add-user-space-CS-support-for-VPE.patch
 	patches.suse/0741-drm-amdgpu-enable-VPE-for-VPE-6.1.0.patch
+	patches.suse/0742-drm-amdgpu-add-VPE-FW-version-query-support.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
