--- a/series.conf
+++ b/series.conf
@@ -13752,6 +13752,7 @@
 	patches.suse/0741-drm-amdgpu-enable-VPE-for-VPE-6.1.0.patch
 	patches.suse/0742-drm-amdgpu-add-VPE-FW-version-query-support.patch
 	patches.suse/0743-drm-amdgpu-fix-VPE-front-door-loading-issue.patch
+	patches.suse/0744-drm-amdgpu-add-vcn-4_0_5-header-files.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
