drm/amdgpu: add VCN4 ip block support (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13753,6 +13753,7 @@
 	patches.suse/0742-drm-amdgpu-add-VPE-FW-version-query-support.patch
 	patches.suse/0743-drm-amdgpu-fix-VPE-front-door-loading-issue.patch
 	patches.suse/0744-drm-amdgpu-add-vcn-4_0_5-header-files.patch
+	patches.suse/0745-drm-amdgpu-add-VCN4-ip-block-support.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
