drm/amdgpu: enable PG flags for VCN (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13759,6 +13759,7 @@
 	patches.suse/0748-drm-amdgpu-enable-CG-and-PG-flags-for-VCN.patch
 	patches.suse/0749-drm-amdgpu-soc21-Add-video-cap-query-support-for-VCN.patch
 	patches.suse/0750-drm-amdgpu-discovery-add-VCN-4.0.5-Support.patch
+	patches.suse/0751-drm-amdgpu-enable-PG-flags-for-VCN.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
