--- a/series.conf
+++ b/series.conf
@@ -13760,6 +13760,7 @@
 	patches.suse/0749-drm-amdgpu-soc21-Add-video-cap-query-support-for-VCN.patch
 	patches.suse/0750-drm-amdgpu-discovery-add-VCN-4.0.5-Support.patch
 	patches.suse/0751-drm-amdgpu-enable-PG-flags-for-VCN.patch
+	patches.suse/0752-drm-amdgpu-add-UMSCH-4.0-register-headers.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
