--- a/series.conf
+++ b/series.conf
@@ -13762,6 +13762,7 @@
 	patches.suse/0751-drm-amdgpu-enable-PG-flags-for-VCN.patch
 	patches.suse/0752-drm-amdgpu-add-UMSCH-4.0-register-headers.patch
 	patches.suse/0753-amdgpu-pm-Optimize-emit_clock_levels-for-arcturus-pa.patch
+	patches.suse/0754-drm-amdgpu-add-UMSCH-IP-BLOCK-TYPE-definition.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
