--- a/series.conf
+++ b/series.conf
@@ -13765,6 +13765,7 @@
 	patches.suse/0754-drm-amdgpu-add-UMSCH-IP-BLOCK-TYPE-definition.patch
 	patches.suse/0755-drm-amd-pm-introduce-a-new-set-of-OD-interfaces.patch
 	patches.suse/0756-drm-amdgpu-revise-the-device-initialization-sequence.patch
+	patches.suse/0757-drm-amdgpu-jpeg-initialize-number-of-jpeg-ring.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
