drm/amd/pm: add fan temperature/pwm curve OD setting support for (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13766,6 +13766,7 @@
 	patches.suse/0755-drm-amd-pm-introduce-a-new-set-of-OD-interfaces.patch
 	patches.suse/0756-drm-amdgpu-revise-the-device-initialization-sequence.patch
 	patches.suse/0757-drm-amdgpu-jpeg-initialize-number-of-jpeg-ring.patch
+	patches.suse/0758-drm-amd-pm-add-fan-temperature-pwm-curve-OD-setting-.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
