--- a/series.conf
+++ b/series.conf
@@ -13767,6 +13767,7 @@
 	patches.suse/0756-drm-amdgpu-revise-the-device-initialization-sequence.patch
 	patches.suse/0757-drm-amdgpu-jpeg-initialize-number-of-jpeg-ring.patch
 	patches.suse/0758-drm-amd-pm-add-fan-temperature-pwm-curve-OD-setting-.patch
+	patches.suse/0759-drm-amd-pm-add-fan-acoustic-limit-OD-setting-support.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
