--- a/series.conf
+++ b/series.conf
@@ -13769,6 +13769,7 @@
 	patches.suse/0758-drm-amd-pm-add-fan-temperature-pwm-curve-OD-setting-.patch
 	patches.suse/0759-drm-amd-pm-add-fan-acoustic-limit-OD-setting-support.patch
 	patches.suse/0760-drm-amdgpu-add-UMSCH-RING-TYPE-definition.patch
+	patches.suse/0761-drm-amdgpu-add-UMSCH-firmware-header-definition.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
