--- a/series.conf
+++ b/series.conf
@@ -13771,6 +13771,7 @@
 	patches.suse/0760-drm-amdgpu-add-UMSCH-RING-TYPE-definition.patch
 	patches.suse/0761-drm-amdgpu-add-UMSCH-firmware-header-definition.patch
 	patches.suse/0762-drm-amdgpu-add-UMSCH-4.0-api-definition.patch
+	patches.suse/0763-drm-amdgpu-add-initial-support-for-UMSCH.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
