--- a/series.conf
+++ b/series.conf
@@ -13773,6 +13773,7 @@
 	patches.suse/0762-drm-amdgpu-add-UMSCH-4.0-api-definition.patch
 	patches.suse/0763-drm-amdgpu-add-initial-support-for-UMSCH.patch
 	patches.suse/0764-drm-amdgpu-enable-UMSCH-scheduling-for-VPE.patch
+	patches.suse/0765-drm-amdgpu-add-selftest-framework-for-UMSCH.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
