drm/amdgpu: add VPE queue submission test (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13774,6 +13774,7 @@
 	patches.suse/0763-drm-amdgpu-add-initial-support-for-UMSCH.patch
 	patches.suse/0764-drm-amdgpu-enable-UMSCH-scheduling-for-VPE.patch
 	patches.suse/0765-drm-amdgpu-add-selftest-framework-for-UMSCH.patch
+	patches.suse/0766-drm-amdgpu-add-VPE-queue-submission-test.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
