--- a/series.conf
+++ b/series.conf
@@ -13775,6 +13775,7 @@
 	patches.suse/0764-drm-amdgpu-enable-UMSCH-scheduling-for-VPE.patch
 	patches.suse/0765-drm-amdgpu-add-selftest-framework-for-UMSCH.patch
 	patches.suse/0766-drm-amdgpu-add-VPE-queue-submission-test.patch
+	patches.suse/0767-drm-amdgpu-reserve-mmhub-engine-3-for-UMSCH-FW.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
