--- a/series.conf
+++ b/series.conf
@@ -13776,6 +13776,7 @@
 	patches.suse/0765-drm-amdgpu-add-selftest-framework-for-UMSCH.patch
 	patches.suse/0766-drm-amdgpu-add-VPE-queue-submission-test.patch
 	patches.suse/0767-drm-amdgpu-reserve-mmhub-engine-3-for-UMSCH-FW.patch
+	patches.suse/0768-drm-amdgpu-add-PSP-loading-support-for-UMSCH.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
