--- a/series.conf
+++ b/series.conf
@@ -13778,6 +13778,7 @@
 	patches.suse/0767-drm-amdgpu-reserve-mmhub-engine-3-for-UMSCH-FW.patch
 	patches.suse/0768-drm-amdgpu-add-PSP-loading-support-for-UMSCH.patch
 	patches.suse/0769-drm-amdgpu-discovery-enable-UMSCH-4.0-in-IP-discover.patch
+	patches.suse/0770-drm-amdgpu-add-amdgpu_umsch_mm-module-parameter.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
