--- a/series.conf
+++ b/series.conf
@@ -13779,6 +13779,7 @@
 	patches.suse/0768-drm-amdgpu-add-PSP-loading-support-for-UMSCH.patch
 	patches.suse/0769-drm-amdgpu-discovery-enable-UMSCH-4.0-in-IP-discover.patch
 	patches.suse/0770-drm-amdgpu-add-amdgpu_umsch_mm-module-parameter.patch
+	patches.suse/0771-drm-amdgpu-update-SET_HW_RESOURCES-definition-for-UM.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
