drm/amd/pm: add fan target temperature OD setting support for SMU13 (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13781,6 +13781,7 @@
 	patches.suse/0770-drm-amdgpu-add-amdgpu_umsch_mm-module-parameter.patch
 	patches.suse/0771-drm-amdgpu-update-SET_HW_RESOURCES-definition-for-UM.patch
 	patches.suse/0772-drm-amd-pm-add-fan-acoustic-target-OD-setting-suppor.patch
+	patches.suse/0773-drm-amd-pm-add-fan-target-temperature-OD-setting-sup.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
