--- a/series.conf
+++ b/series.conf
@@ -13782,6 +13782,7 @@
 	patches.suse/0771-drm-amdgpu-update-SET_HW_RESOURCES-definition-for-UM.patch
 	patches.suse/0772-drm-amd-pm-add-fan-acoustic-target-OD-setting-suppor.patch
 	patches.suse/0773-drm-amd-pm-add-fan-target-temperature-OD-setting-sup.patch
+	patches.suse/0774-drm-amd-pm-add-fan-minimum-pwm-OD-setting-support-fo.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
