--- a/series.conf
+++ b/series.conf
@@ -13783,6 +13783,7 @@
 	patches.suse/0772-drm-amd-pm-add-fan-acoustic-target-OD-setting-suppor.patch
 	patches.suse/0773-drm-amd-pm-add-fan-target-temperature-OD-setting-sup.patch
 	patches.suse/0774-drm-amd-pm-add-fan-minimum-pwm-OD-setting-support-fo.patch
+	patches.suse/0775-Revert-drm-amd-pm-disable-the-SMU13-OD-feature-suppo.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
