drm/amd/pm: only poweron/off vcn/jpeg when they are valid. (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13785,6 +13785,7 @@
 	patches.suse/0774-drm-amd-pm-add-fan-minimum-pwm-OD-setting-support-fo.patch
 	patches.suse/0775-Revert-drm-amd-pm-disable-the-SMU13-OD-feature-suppo.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
+	patches.suse/0777-drm-amd-pm-only-poweron-off-vcn-jpeg-when-they-are-v.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
 	patches.suse/drm-amd-display-Don-t-lock-phantom-pipe-on-disabling.patch
