--- a/series.conf
+++ b/series.conf
@@ -13786,6 +13786,7 @@
 	patches.suse/0775-Revert-drm-amd-pm-disable-the-SMU13-OD-feature-suppo.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/0777-drm-amd-pm-only-poweron-off-vcn-jpeg-when-they-are-v.patch
+	patches.suse/0778-drm-amdgpu-calling-address-translation-functions-to-.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
 	patches.suse/drm-amd-display-Don-t-lock-phantom-pipe-on-disabling.patch
