drm/amd/display: Remove duplicated include in dcn35_optc.c (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13789,6 +13789,7 @@
 	patches.suse/0778-drm-amdgpu-calling-address-translation-functions-to-.patch
 	patches.suse/0779-drm-amdgpu-clean-up-some-inconsistent-indenting.patch
 	patches.suse/0780-drm-amd-display-Remove-duplicated-include-in-dcn35_r.patch
+	patches.suse/0781-drm-amd-display-Remove-duplicated-include-in-dcn35_o.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
 	patches.suse/drm-amd-display-Don-t-lock-phantom-pipe-on-disabling.patch
