--- a/series.conf
+++ b/series.conf
@@ -13791,6 +13791,7 @@
 	patches.suse/0780-drm-amd-display-Remove-duplicated-include-in-dcn35_r.patch
 	patches.suse/0781-drm-amd-display-Remove-duplicated-include-in-dcn35_o.patch
 	patches.suse/0782-drm-amd-display-Remove-duplicated-include-in-dcn35_h.patch
+	patches.suse/0783-drm-amd-display-Remove-duplicated-include-in-dcn35_c.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
 	patches.suse/drm-amd-display-Don-t-lock-phantom-pipe-on-disabling.patch
