--- a/series.conf
+++ b/series.conf
@@ -13793,6 +13793,7 @@
 	patches.suse/0782-drm-amd-display-Remove-duplicated-include-in-dcn35_h.patch
 	patches.suse/0783-drm-amd-display-Remove-duplicated-include-in-dcn35_c.patch
 	patches.suse/0784-drm-amd-display-clean-up-one-inconsistent-indenting.patch
+	patches.suse/0785-drm-amd-display-clean-up-one-inconsistent-indenting.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
 	patches.suse/drm-amd-display-Don-t-lock-phantom-pipe-on-disabling.patch
