amdgpu/pm: Replace print_clock_levels with emit_clock_levels for (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13796,6 +13796,7 @@
 	patches.suse/0785-drm-amd-display-clean-up-one-inconsistent-indenting.patch
 	patches.suse/0786-drm-amd-display-clean-up-some-inconsistent-indenting.patch
 	patches.suse/0787-drm-amd-display-clean-up-some-inconsistent-indenting.patch
+	patches.suse/0788-amdgpu-pm-Replace-print_clock_levels-with-emit_clock.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
 	patches.suse/drm-amd-display-Don-t-lock-phantom-pipe-on-disabling.patch
