--- a/series.conf
+++ b/series.conf
@@ -13799,6 +13799,7 @@
 	patches.suse/0788-amdgpu-pm-Replace-print_clock_levels-with-emit_clock.patch
 	patches.suse/0789-amdgpu-pm-Optimize-emit_clock_levels-for-aldebaran-p.patch
 	patches.suse/0790-amdgpu-pm-Optimize-emit_clock_levels-for-aldebaran-p.patch
+	patches.suse/0791-amdgpu-pm-Optimize-emit_clock_levels-for-aldebaran-p.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
 	patches.suse/drm-amd-display-Don-t-lock-phantom-pipe-on-disabling.patch
