drm/amdgpu: Add RREG64_PCIE_EXT/WREG64_PCIE_EXT functions (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13801,6 +13801,7 @@
 	patches.suse/0790-amdgpu-pm-Optimize-emit_clock_levels-for-aldebaran-p.patch
 	patches.suse/0791-amdgpu-pm-Optimize-emit_clock_levels-for-aldebaran-p.patch
 	patches.suse/0792-drm-amdgpu-Declare-array-with-strings-as-pointers-co.patch
+	patches.suse/0793-drm-amdgpu-Add-RREG64_PCIE_EXT-WREG64_PCIE_EXT-funct.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
 	patches.suse/drm-amd-display-Don-t-lock-phantom-pipe-on-disabling.patch
