--- a/series.conf
+++ b/series.conf
@@ -13804,6 +13804,7 @@
 	patches.suse/0793-drm-amdgpu-Add-RREG64_PCIE_EXT-WREG64_PCIE_EXT-funct.patch
 	patches.suse/0794-drm-amdgpu-Update-amdgpu_device_indirect_r-wreg_ext.patch
 	patches.suse/0795-drm-amd-Add-umc-v12_0_0-ip-headers.patch
+	patches.suse/0796-drm-amdgpu-Use-min_t-to-replace-min.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
 	patches.suse/drm-amd-display-Don-t-lock-phantom-pipe-on-disabling.patch
