drm/amdgpu: fix incompatible types in conditional expression (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13805,6 +13805,7 @@
 	patches.suse/0794-drm-amdgpu-Update-amdgpu_device_indirect_r-wreg_ext.patch
 	patches.suse/0795-drm-amd-Add-umc-v12_0_0-ip-headers.patch
 	patches.suse/0796-drm-amdgpu-Use-min_t-to-replace-min.patch
+	patches.suse/0797-drm-amdgpu-fix-incompatible-types-in-conditional-exp.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
 	patches.suse/drm-amd-display-Don-t-lock-phantom-pipe-on-disabling.patch
