--- a/series.conf
+++ b/series.conf
@@ -13806,6 +13806,7 @@
 	patches.suse/0795-drm-amd-Add-umc-v12_0_0-ip-headers.patch
 	patches.suse/0796-drm-amdgpu-Use-min_t-to-replace-min.patch
 	patches.suse/0797-drm-amdgpu-fix-incompatible-types-in-conditional-exp.patch
+	patches.suse/0798-drm-amdgpu-Add-only-valid-firmware-version-nodes.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
 	patches.suse/drm-amd-display-Don-t-lock-phantom-pipe-on-disabling.patch
