drm/amdgpu: Correct se_num and reg_inst for gfx v9_4_3 ras counters (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13807,6 +13807,7 @@
 	patches.suse/0796-drm-amdgpu-Use-min_t-to-replace-min.patch
 	patches.suse/0797-drm-amdgpu-fix-incompatible-types-in-conditional-exp.patch
 	patches.suse/0798-drm-amdgpu-Add-only-valid-firmware-version-nodes.patch
+	patches.suse/0799-drm-amdgpu-Correct-se_num-and-reg_inst-for-gfx-v9_4_.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
 	patches.suse/drm-amd-display-Don-t-lock-phantom-pipe-on-disabling.patch
