drm/amdgpu: fix unsigned error codes (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13811,6 +13811,7 @@
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
 	patches.suse/0801-drm-amdgpu-Add-umc-v12_0-ras-functions.patch
 	patches.suse/0802-drm-amd-display-clean-up-one-inconsistent-indenting.patch
+	patches.suse/0803-drm-amdgpu-fix-unsigned-error-codes.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
 	patches.suse/drm-amd-display-Don-t-lock-phantom-pipe-on-disabling.patch
 	patches.suse/drm-amd-display-add-seamless-pipe-topology-transitio.patch
