--- a/series.conf
+++ b/series.conf
@@ -13814,6 +13814,7 @@
 	patches.suse/0803-drm-amdgpu-fix-unsigned-error-codes.patch
 	patches.suse/0804-drm-amd-Fix-the-flag-setting-code-for-interrupt-requ.patch
 	patches.suse/0805-drm-amdgpu-Use-default-reset-method-handler.patch
+	patches.suse/0806-drm-amdgpu-add-address-conversion-for-UMC-v12.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
 	patches.suse/drm-amd-display-Don-t-lock-phantom-pipe-on-disabling.patch
 	patches.suse/drm-amd-display-add-seamless-pipe-topology-transitio.patch
