drm/amd/pm: enable smu_v13_0_6 mca debug mode when UMC RAS feature is (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13816,6 +13816,7 @@
 	patches.suse/0805-drm-amdgpu-Use-default-reset-method-handler.patch
 	patches.suse/0806-drm-amdgpu-add-address-conversion-for-UMC-v12.patch
 	patches.suse/0807-drm-amd-pm-update-smu_v13_0_6-smu-header.patch
+	patches.suse/0808-drm-amd-pm-enable-smu_v13_0_6-mca-debug-mode-when-UM.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
 	patches.suse/drm-amd-display-Don-t-lock-phantom-pipe-on-disabling.patch
 	patches.suse/drm-amd-display-add-seamless-pipe-topology-transitio.patch
