--- a/series.conf
+++ b/series.conf
@@ -13817,6 +13817,7 @@
 	patches.suse/0806-drm-amdgpu-add-address-conversion-for-UMC-v12.patch
 	patches.suse/0807-drm-amd-pm-update-smu_v13_0_6-smu-header.patch
 	patches.suse/0808-drm-amd-pm-enable-smu_v13_0_6-mca-debug-mode-when-UM.patch
+	patches.suse/0809-drm-amdgpu-add-channel-index-table-for-UMC-v12.patch
 	patches.suse/drm-amd-display-Blank-phantom-OTG-before-enabling.patch
 	patches.suse/drm-amd-display-Don-t-lock-phantom-pipe-on-disabling.patch
 	patches.suse/drm-amd-display-add-seamless-pipe-topology-transitio.patch
