--- a/series.conf
+++ b/series.conf
@@ -13823,6 +13823,7 @@
 	patches.suse/0812-drm-amd-display-set-default-return-value-for-ODM-Com.patch
 	patches.suse/0813-drm-amd-display-FW-Promotion-Release-0.0.181.0.patch
 	patches.suse/0814-drm-amdgpu-print-more-address-info-of-UMC-bad-page.patch
+	patches.suse/0815-drm-amd-display-Fix-DML-calculation-errors.patch
 	patches.suse/drm-amd-display-add-seamless-pipe-topology-transitio.patch
 	patches.suse/drm-amdkfd-Remove-svm-range-validated_once-flag.patch
 	patches.suse/drm-amdgpu-Increase-IH-soft-ring-size-for-GFX-v9.4.3.patch
