drm/amd/display: do not block ODM + OPM on one side of the screen (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13824,6 +13824,7 @@
 	patches.suse/0813-drm-amd-display-FW-Promotion-Release-0.0.181.0.patch
 	patches.suse/0814-drm-amdgpu-print-more-address-info-of-UMC-bad-page.patch
 	patches.suse/0815-drm-amd-display-Fix-DML-calculation-errors.patch
+	patches.suse/0816-drm-amd-display-do-not-block-ODM-OPM-on-one-side-of-.patch
 	patches.suse/drm-amd-display-add-seamless-pipe-topology-transitio.patch
 	patches.suse/drm-amdkfd-Remove-svm-range-validated_once-flag.patch
 	patches.suse/drm-amdgpu-Increase-IH-soft-ring-size-for-GFX-v9.4.3.patch
