--- a/series.conf
+++ b/series.conf
@@ -13825,6 +13825,7 @@
 	patches.suse/0814-drm-amdgpu-print-more-address-info-of-UMC-bad-page.patch
 	patches.suse/0815-drm-amd-display-Fix-DML-calculation-errors.patch
 	patches.suse/0816-drm-amd-display-do-not-block-ODM-OPM-on-one-side-of-.patch
+	patches.suse/0817-drm-amdgpu-Rename-KGD_MAX_QUEUES-to-AMDGPU_MAX_QUEUE.patch
 	patches.suse/drm-amd-display-add-seamless-pipe-topology-transitio.patch
 	patches.suse/drm-amdkfd-Remove-svm-range-validated_once-flag.patch
 	patches.suse/drm-amdgpu-Increase-IH-soft-ring-size-for-GFX-v9.4.3.patch
