--- a/series.conf
+++ b/series.conf
@@ -13828,6 +13828,7 @@
 	patches.suse/0817-drm-amdgpu-Rename-KGD_MAX_QUEUES-to-AMDGPU_MAX_QUEUE.patch
 	patches.suse/0818-drm-amd-display-support-main-link-off-before-specifi.patch
 	patches.suse/0819-drm-amd-display-Add-new-logs-for-AutoDPMTest.patch
+	patches.suse/0820-drm-amd-display-Add-DCHUBBUB-callback-to-report-MALL.patch
 	patches.suse/drm-amd-display-add-seamless-pipe-topology-transitio.patch
 	patches.suse/drm-amdkfd-Remove-svm-range-validated_once-flag.patch
 	patches.suse/drm-amdgpu-Increase-IH-soft-ring-size-for-GFX-v9.4.3.patch
