drm/amd/display: remove a function that does complex calculation in (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13829,6 +13829,7 @@
 	patches.suse/0818-drm-amd-display-support-main-link-off-before-specifi.patch
 	patches.suse/0819-drm-amd-display-Add-new-logs-for-AutoDPMTest.patch
 	patches.suse/0820-drm-amd-display-Add-DCHUBBUB-callback-to-report-MALL.patch
+	patches.suse/0821-drm-amd-display-remove-a-function-that-does-complex-.patch
 	patches.suse/drm-amd-display-add-seamless-pipe-topology-transitio.patch
 	patches.suse/drm-amdkfd-Remove-svm-range-validated_once-flag.patch
 	patches.suse/drm-amdgpu-Increase-IH-soft-ring-size-for-GFX-v9.4.3.patch
