drm/amdgpu: add type conversion for gc info (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13834,6 +13834,7 @@
 	patches.suse/0823-drm-amd-display-only-allow-ODM-power-optimization-if.patch
 	patches.suse/0824-drm-amd-display-add-dp-dto-programming-function-to-d.patch
 	patches.suse/0825-drm-amd-display-Drop-unused-registers.patch
+	patches.suse/0826-drm-amdgpu-add-type-conversion-for-gc-info.patch
 	patches.suse/drm-amd-display-add-seamless-pipe-topology-transitio.patch
 	patches.suse/drm-amdkfd-Remove-svm-range-validated_once-flag.patch
 	patches.suse/drm-amdgpu-Increase-IH-soft-ring-size-for-GFX-v9.4.3.patch
