--- a/series.conf
+++ b/series.conf
@@ -13835,6 +13835,7 @@
 	patches.suse/0824-drm-amd-display-add-dp-dto-programming-function-to-d.patch
 	patches.suse/0825-drm-amd-display-Drop-unused-registers.patch
 	patches.suse/0826-drm-amdgpu-add-type-conversion-for-gc-info.patch
+	patches.suse/0827-drm-amd-display-dc-cleanup-for-tests.patch
 	patches.suse/drm-amd-display-add-seamless-pipe-topology-transitio.patch
 	patches.suse/drm-amdkfd-Remove-svm-range-validated_once-flag.patch
 	patches.suse/drm-amdgpu-Increase-IH-soft-ring-size-for-GFX-v9.4.3.patch
