--- a/series.conf
+++ b/series.conf
@@ -13838,6 +13838,7 @@
 	patches.suse/0827-drm-amd-display-dc-cleanup-for-tests.patch
 	patches.suse/0828-drm-amd-display-Add-check-for-vrr_active_fixed.patch
 	patches.suse/0829-drm-amd-display-fix-some-non-initialized-register-ma.patch
+	patches.suse/0830-drm-amd-display-3.2.250.patch
 	patches.suse/drm-amd-display-add-seamless-pipe-topology-transitio.patch
 	patches.suse/drm-amdkfd-Remove-svm-range-validated_once-flag.patch
 	patches.suse/drm-amdgpu-Increase-IH-soft-ring-size-for-GFX-v9.4.3.patch
