--- a/series.conf
+++ b/series.conf
@@ -13840,6 +13840,7 @@
 	patches.suse/0829-drm-amd-display-fix-some-non-initialized-register-ma.patch
 	patches.suse/0830-drm-amd-display-3.2.250.patch
 	patches.suse/drm-amd-display-add-seamless-pipe-topology-transitio.patch
+	patches.suse/0832-drm-amd-display-move-odm-power-optimization-decision.patch
 	patches.suse/drm-amdkfd-Remove-svm-range-validated_once-flag.patch
 	patches.suse/drm-amdgpu-Increase-IH-soft-ring-size-for-GFX-v9.4.3.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
