--- a/series.conf
+++ b/series.conf
@@ -13841,6 +13841,7 @@
 	patches.suse/0830-drm-amd-display-3.2.250.patch
 	patches.suse/drm-amd-display-add-seamless-pipe-topology-transitio.patch
 	patches.suse/0832-drm-amd-display-move-odm-power-optimization-decision.patch
+	patches.suse/0833-drm-amd-display-do-not-skip-ODM-minimal-transition-b.patch
 	patches.suse/drm-amdkfd-Remove-svm-range-validated_once-flag.patch
 	patches.suse/drm-amdgpu-Increase-IH-soft-ring-size-for-GFX-v9.4.3.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
