drm/amd/display: add skip_implict_edp_power_control flag for dcn32 (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13843,6 +13843,7 @@
 	patches.suse/0832-drm-amd-display-move-odm-power-optimization-decision.patch
 	patches.suse/0833-drm-amd-display-do-not-skip-ODM-minimal-transition-b.patch
 	patches.suse/0834-drm-amd-display-minior-logging-improvements.patch
+	patches.suse/0835-drm-amd-display-add-skip_implict_edp_power_control-f.patch
 	patches.suse/drm-amdkfd-Remove-svm-range-validated_once-flag.patch
 	patches.suse/drm-amdgpu-Increase-IH-soft-ring-size-for-GFX-v9.4.3.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
