--- a/series.conf
+++ b/series.conf
@@ -13844,6 +13844,7 @@
 	patches.suse/0833-drm-amd-display-do-not-skip-ODM-minimal-transition-b.patch
 	patches.suse/0834-drm-amd-display-minior-logging-improvements.patch
 	patches.suse/0835-drm-amd-display-add-skip_implict_edp_power_control-f.patch
+	patches.suse/0836-drm-amd-display-clean-up-some-inconsistent-indenting.patch
 	patches.suse/drm-amdkfd-Remove-svm-range-validated_once-flag.patch
 	patches.suse/drm-amdgpu-Increase-IH-soft-ring-size-for-GFX-v9.4.3.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
