--- a/series.conf
+++ b/series.conf
@@ -13847,6 +13847,7 @@
 	patches.suse/0836-drm-amd-display-clean-up-some-inconsistent-indenting.patch
 	patches.suse/0837-drm-amdgpu-Merge-debug-module-parameters.patch
 	patches.suse/0838-drm-amdgpu-Create-an-option-to-disable-soft-recovery.patch
+	patches.suse/0839-drm-amdgpu-add-vcn_doorbell_range-callback-for-nbio-.patch
 	patches.suse/drm-amdkfd-Remove-svm-range-validated_once-flag.patch
 	patches.suse/drm-amdgpu-Increase-IH-soft-ring-size-for-GFX-v9.4.3.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
