--- a/series.conf
+++ b/series.conf
@@ -13850,6 +13850,7 @@
 	patches.suse/0839-drm-amdgpu-add-vcn_doorbell_range-callback-for-nbio-.patch
 	patches.suse/0840-drm-amdgpu-add-remap_hdp_registers-callback-for-nbio.patch
 	patches.suse/0841-drm-amdgpu-Use-function-for-IP-version-check.patch
+	patches.suse/0842-drm-amd-pm-Fix-clock-reporting-for-SMUv13.0.6.patch
 	patches.suse/drm-amdkfd-Remove-svm-range-validated_once-flag.patch
 	patches.suse/drm-amdgpu-Increase-IH-soft-ring-size-for-GFX-v9.4.3.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
