drm/amd/pm:Fix GFX deep sleep clock reporting (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13851,6 +13851,7 @@
 	patches.suse/0840-drm-amdgpu-add-remap_hdp_registers-callback-for-nbio.patch
 	patches.suse/0841-drm-amdgpu-Use-function-for-IP-version-check.patch
 	patches.suse/0842-drm-amd-pm-Fix-clock-reporting-for-SMUv13.0.6.patch
+	patches.suse/0843-drm-amd-pm-Fix-GFX-deep-sleep-clock-reporting.patch
 	patches.suse/drm-amdkfd-Remove-svm-range-validated_once-flag.patch
 	patches.suse/drm-amdgpu-Increase-IH-soft-ring-size-for-GFX-v9.4.3.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
