--- a/series.conf
+++ b/series.conf
@@ -13852,6 +13852,7 @@
 	patches.suse/0841-drm-amdgpu-Use-function-for-IP-version-check.patch
 	patches.suse/0842-drm-amd-pm-Fix-clock-reporting-for-SMUv13.0.6.patch
 	patches.suse/0843-drm-amd-pm-Fix-GFX-deep-sleep-clock-reporting.patch
+	patches.suse/0844-drm-amd-Drop-special-case-for-yellow-carp-without-di.patch
 	patches.suse/drm-amdkfd-Remove-svm-range-validated_once-flag.patch
 	patches.suse/drm-amdgpu-Increase-IH-soft-ring-size-for-GFX-v9.4.3.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
