--- a/series.conf
+++ b/series.conf
@@ -13854,6 +13854,7 @@
 	patches.suse/0843-drm-amd-pm-Fix-GFX-deep-sleep-clock-reporting.patch
 	patches.suse/0844-drm-amd-Drop-special-case-for-yellow-carp-without-di.patch
 	patches.suse/0845-drm-amd-Move-seamless-boot-check-out-of-display.patch
+	patches.suse/0846-drm-amd-Add-HDP-flush-during-jpeg-init.patch
 	patches.suse/drm-amdkfd-Remove-svm-range-validated_once-flag.patch
 	patches.suse/drm-amdgpu-Increase-IH-soft-ring-size-for-GFX-v9.4.3.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
