Documentation/amdgpu: Modify pp_dpm_*clk details (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13857,6 +13857,7 @@
 	patches.suse/0846-drm-amd-Add-HDP-flush-during-jpeg-init.patch
 	patches.suse/0847-drm-amd-Add-a-module-parameter-for-seamless-boot.patch
 	patches.suse/0848-drm-amd-Enable-seamless-boot-by-default-on-newer-ASI.patch
+	patches.suse/0849-Documentation-amdgpu-Modify-pp_dpm_-clk-details.patch
 	patches.suse/drm-amdkfd-Remove-svm-range-validated_once-flag.patch
 	patches.suse/drm-amdgpu-Increase-IH-soft-ring-size-for-GFX-v9.4.3.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
