--- a/series.conf
+++ b/series.conf
@@ -13859,6 +13859,7 @@
 	patches.suse/0848-drm-amd-Enable-seamless-boot-by-default-on-newer-ASI.patch
 	patches.suse/0849-Documentation-amdgpu-Modify-pp_dpm_-clk-details.patch
 	patches.suse/0850-drm-amdgpu-add-amdgpu-smu-mca-dump-feature-support.patch
+	patches.suse/0851-drm-amdgpu-add-VPE-IP-discovery-info-to-HW-IP-info-q.patch
 	patches.suse/drm-amdkfd-Remove-svm-range-validated_once-flag.patch
 	patches.suse/drm-amdgpu-Increase-IH-soft-ring-size-for-GFX-v9.4.3.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
