drm/amdkfd: fix add queue process context clear without runtime (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13861,6 +13861,7 @@
 	patches.suse/0850-drm-amdgpu-add-amdgpu-smu-mca-dump-feature-support.patch
 	patches.suse/0851-drm-amdgpu-add-VPE-IP-discovery-info-to-HW-IP-info-q.patch
 	patches.suse/0852-drm-amdgpu-add-amdgpu-mca-debug-sysfs-support.patch
+	patches.suse/0853-drm-amdkfd-fix-add-queue-process-context-clear-witho.patch
 	patches.suse/drm-amdkfd-Remove-svm-range-validated_once-flag.patch
 	patches.suse/drm-amdgpu-Increase-IH-soft-ring-size-for-GFX-v9.4.3.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
