--- a/series.conf
+++ b/series.conf
@@ -13862,6 +13862,7 @@
 	patches.suse/0851-drm-amdgpu-add-VPE-IP-discovery-info-to-HW-IP-info-q.patch
 	patches.suse/0852-drm-amdgpu-add-amdgpu-mca-debug-sysfs-support.patch
 	patches.suse/0853-drm-amdkfd-fix-add-queue-process-context-clear-witho.patch
+	patches.suse/0854-drm-amdgpu-Add-EXT_COHERENT-memory-allocation-flags.patch
 	patches.suse/drm-amdkfd-Remove-svm-range-validated_once-flag.patch
 	patches.suse/drm-amdgpu-Increase-IH-soft-ring-size-for-GFX-v9.4.3.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
