drm/amdgpu: Fix vbios version string search (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13865,6 +13865,7 @@
 	patches.suse/0854-drm-amdgpu-Add-EXT_COHERENT-memory-allocation-flags.patch
 	patches.suse/0855-drm-amd-pm-update-smu_v13_0_6-ppsmc-header.patch
 	patches.suse/0856-drm-amd-pm-add-smu_13_0_6-mca-dump-support.patch
+	patches.suse/0857-drm-amdgpu-Fix-vbios-version-string-search.patch
 	patches.suse/drm-amdkfd-Remove-svm-range-validated_once-flag.patch
 	patches.suse/drm-amdgpu-Increase-IH-soft-ring-size-for-GFX-v9.4.3.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
