--- a/series.conf
+++ b/series.conf
@@ -13866,6 +13866,7 @@
 	patches.suse/0855-drm-amd-pm-update-smu_v13_0_6-ppsmc-header.patch
 	patches.suse/0856-drm-amd-pm-add-smu_13_0_6-mca-dump-support.patch
 	patches.suse/0857-drm-amdgpu-Fix-vbios-version-string-search.patch
+	patches.suse/0858-drm-amd-display-Hook-up-content-type-property-for-HD.patch
 	patches.suse/drm-amdkfd-Remove-svm-range-validated_once-flag.patch
 	patches.suse/drm-amdgpu-Increase-IH-soft-ring-size-for-GFX-v9.4.3.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
