drm/amdgpu: Rework coredump to use memory dynamically (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13868,6 +13868,7 @@
 	patches.suse/0857-drm-amdgpu-Fix-vbios-version-string-search.patch
 	patches.suse/0858-drm-amd-display-Hook-up-content-type-property-for-HD.patch
 	patches.suse/0859-drm-amd-display-Remove-unused-display_content_suppor.patch
+	patches.suse/0860-drm-amdgpu-Rework-coredump-to-use-memory-dynamically.patch
 	patches.suse/drm-amdkfd-Remove-svm-range-validated_once-flag.patch
 	patches.suse/drm-amdgpu-Increase-IH-soft-ring-size-for-GFX-v9.4.3.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
