--- a/series.conf
+++ b/series.conf
@@ -13869,6 +13869,7 @@
 	patches.suse/0858-drm-amd-display-Hook-up-content-type-property-for-HD.patch
 	patches.suse/0859-drm-amd-display-Remove-unused-display_content_suppor.patch
 	patches.suse/0860-drm-amdgpu-Rework-coredump-to-use-memory-dynamically.patch
+	patches.suse/0861-drm-amd-display-Add-reset-for-SYMCLKC_FE_SRC_SEL.patch
 	patches.suse/drm-amdkfd-Remove-svm-range-validated_once-flag.patch
 	patches.suse/drm-amdgpu-Increase-IH-soft-ring-size-for-GFX-v9.4.3.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
