drm/amd/display: Enable DCLK_DS from driver by default (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13875,6 +13875,7 @@
 	patches.suse/0864-drm-amd-display-Fix-dig-register-undefined.patch
 	patches.suse/0865-drm-amd-display-Add-z8_marks-related-in-dml-for-DCN3.patch
 	patches.suse/0866-drm-amd-display-Add-DCN35-case-for-dc_clk_mgr_create.patch
+	patches.suse/0867-drm-amd-display-Enable-DCLK_DS-from-driver-by-defaul.patch
 	patches.suse/drm-amdkfd-Remove-svm-range-validated_once-flag.patch
 	patches.suse/drm-amdgpu-Increase-IH-soft-ring-size-for-GFX-v9.4.3.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
