--- a/series.conf
+++ b/series.conf
@@ -13880,6 +13880,7 @@
 	patches.suse/0869-drm-amd-display-fix-static-screen-detection-setting-.patch
 	patches.suse/0870-drm-amd-display-Add-DPIA-Link-Encoder-Assignment-Fix.patch
 	patches.suse/0871-drm-amd-display-Update-pipe-resource-interfaces-for-.patch
+	patches.suse/0872-drm-amd-display-STREAM_MAPPER_CONTROL-register-offse.patch
 	patches.suse/drm-amdkfd-Remove-svm-range-validated_once-flag.patch
 	patches.suse/drm-amdgpu-Increase-IH-soft-ring-size-for-GFX-v9.4.3.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
