drm/amd/display: Add IPS control flag (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13883,6 +13883,7 @@
 	patches.suse/0872-drm-amd-display-STREAM_MAPPER_CONTROL-register-offse.patch
 	patches.suse/0873-drm-amd-display-Correct-z8-watermark-mask.patch
 	patches.suse/0874-drm-amd-display-Update-driver-and-IPS-interop.patch
+	patches.suse/0875-drm-amd-display-Add-IPS-control-flag.patch
 	patches.suse/drm-amdkfd-Remove-svm-range-validated_once-flag.patch
 	patches.suse/drm-amdgpu-Increase-IH-soft-ring-size-for-GFX-v9.4.3.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
