--- a/series.conf
+++ b/series.conf
@@ -13884,6 +13884,7 @@
 	patches.suse/0873-drm-amd-display-Correct-z8-watermark-mask.patch
 	patches.suse/0874-drm-amd-display-Update-driver-and-IPS-interop.patch
 	patches.suse/0875-drm-amd-display-Add-IPS-control-flag.patch
+	patches.suse/0876-drm-amd-display-disable-IPS.patch
 	patches.suse/drm-amdkfd-Remove-svm-range-validated_once-flag.patch
 	patches.suse/drm-amdgpu-Increase-IH-soft-ring-size-for-GFX-v9.4.3.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
