--- a/series.conf
+++ b/series.conf
@@ -13886,6 +13886,7 @@
 	patches.suse/0875-drm-amd-display-Add-IPS-control-flag.patch
 	patches.suse/0876-drm-amd-display-disable-IPS.patch
 	patches.suse/0877-drm-amd-display-Add-option-to-flip-ODM-optimization.patch
+	patches.suse/0878-drm-amd-display-Enable-replay-for-dcn35.patch
 	patches.suse/drm-amdkfd-Remove-svm-range-validated_once-flag.patch
 	patches.suse/drm-amdgpu-Increase-IH-soft-ring-size-for-GFX-v9.4.3.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
