drm/amd/display: Fix MST recognizes connected displays as one (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13888,6 +13888,7 @@
 	patches.suse/0877-drm-amd-display-Add-option-to-flip-ODM-optimization.patch
 	patches.suse/0878-drm-amd-display-Enable-replay-for-dcn35.patch
 	patches.suse/0879-drm-amd-display-fix-some-non-initialized-register-ma.patch
+	patches.suse/0880-drm-amd-display-Fix-MST-recognizes-connected-display.patch
 	patches.suse/drm-amdkfd-Remove-svm-range-validated_once-flag.patch
 	patches.suse/drm-amdgpu-Increase-IH-soft-ring-size-for-GFX-v9.4.3.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
