drm/amdgpu: print channel index for UMC bad page (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13897,6 +13897,7 @@
 	patches.suse/0886-drm-amd-pm-Round-Q10-format-values-in-SMU-v13.0.6.patch
 	patches.suse/0887-drm-amd-pm-Remove-SMUv13.0.6-unsupported-feature.patch
 	patches.suse/0888-drm-amdkfd-Separate-dma-unmap-and-free-of-dma-addres.patch
+	patches.suse/0889-drm-amdgpu-print-channel-index-for-UMC-bad-page.patch
 	patches.suse/drm-amdkfd-Remove-svm-range-validated_once-flag.patch
 	patches.suse/drm-amdgpu-Increase-IH-soft-ring-size-for-GFX-v9.4.3.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
